# school

./: .dockerignore  .env  .env.example  .eslintignore  .eslintrc.cjs  .gitignore  Dockerfile  Person Information Template.xlsx  README.md  STANDARDIZATION_PLAN.md  camera-debug.txt  docker-compose.yml  fix-cam1.ts  get_secrets.ts  package-lock.json  package.json  realtime_school_monitoring_saas.md  secrets.json  seed-today.ts  server.ts  test-camera-stream.ts  tmp_rovodev_commit_a0b0ca0.tsx  tmp_rovodev_old_students.tsx  tsconfig.json  update-cam1.ts  update-camera-urls.ts  update-to-main.ts
apps/student-registrator/src-tauri/: Cargo.toml  tauri.conf.json
apps/student-registrator/src-tauri/icons/: icon.icns
apps/student-registrator/src-tauri/src/: api.rs  command_services.rs  commands.rs  hikvision.rs  main.rs  storage.rs  types.rs
apps/student-registrator/src-tauri/src/app/: run.rs
apps/student-registrator/src-tauri/src/application/services/: command_services.rs  mod.rs
apps/student-registrator/src-tauri/src/domain/entities/: device.rs  mod.rs  provisioning.rs  register.rs  user.rs
apps/student-registrator/src-tauri/src/infrastructure/backend/: api_client.rs
apps/student-registrator/src-tauri/src/infrastructure/hikvision/: client_chunk_1.rs  client_chunk_2.rs  client_chunk_3.rs  client_chunk_4.rs  client_chunk_5.rs  helpers.rs
apps/student-registrator/src-tauri/src/infrastructure/storage/: device_store.rs  mod.rs
apps/student-registrator/src-tauri/src/shared/: mod.rs
apps/student-registrator/src-tauri/target_codex/: .rustc_info.json
prisma/: seed.ts  (+3 more)
(+773 files in other folders)
