[package]
name = "student-registrator"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["dialog-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.21"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
chrono = "0.4"
rand = "0.8"
md5 = "0.7"

[features]
custom-protocol = ["tauri/custom-protocol"]
